--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 data_settings:
-    dataset_path: 'dataset'
+    dataset_path: 'wikiart_data_batches/data_batch1_00000-00011'
 model:
     model_type: 'resnet' # resnet or efficentnet
     num_classes: 128
