--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ run_job.sh
 # Data dir
 wikiart_data_batches/
 
+# Wandb dir
+wandb/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
