--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,16 @@
 data_settings:
     dataset_path: 'wikiart_data_batches/data_batches_filtered'
 model:
-    model_type: 'resnet' # resnet or efficentnet
-    num_classes: 128
+    model_type: 'efficientnet' # resnet or efficientnet
+    num_classes: 10
     checkpoint_folder: 'checkpoints'
     continue_train: False
 fine_tuning:
-    epochs: 10
-    batch_size: 1
-    learning_rate: 0.00001
+    epochs: 50
+    batch_size: 8
+    learning_rate: 0.0001
 train:
     epochs: 100
     batch_size: 8
     learning_rate: 0.001
+
