--- a/config.yaml
+++ b/config.yaml
@@ -2,13 +2,14 @@ data_settings:
     dataset_path: 'wikiart_data_batches/data_batches_filtered'
 model:
     model_type: 'efficientnet' # resnet or efficientnet
-    num_classes: 10
+    num_classes: 2
     checkpoint_folder: 'checkpoints'
     continue_train: False
+    binary: True
 fine_tuning:
     epochs: 50
     batch_size: 8
-    learning_rate: 0.0001
+    learning_rate: 0.00002
 train:
     epochs: 100
     batch_size: 8
