--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ run_job.sh
 # Data dir
 wikiart_data_batches/
 
+
 # Wandb dir
 wandb/
 
@@ -167,3 +168,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/Vincent_Fakes/
