--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,12 @@
 data_settings:
     dataset_path: 'wikiart_data_batches/data_batches_filtered'
-    binary: False
+    binary: True
 model:
     model_type: 'efficientnet' # resnet or efficientnet
-    num_classes: 10
+    num_classes: 2
     checkpoint_folder: 'checkpoints'
     continue_train: False
-    binary: False
+    binary: True
 fine_tuning:
     epochs: 50
     batch_size: 8
