--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ data_settings:
     dataset_path: 'wikiart_data_batches/data_batches_filtered'
     binary: True
 model:
-    model_type: 'efficientnet' # resnet or efficientnet
+    model_type: 'efficientnetattention' # resnet or efficientnet
     num_classes: 2
     checkpoint_folder: 'checkpoints'
     continue_train: False
