--- a/config.yaml
+++ b/config.yaml
@@ -1,19 +1,19 @@
 data_settings:
     dataset_path: 'wikiart_data_batches/data_batches_filtered'
     binary: True
-    contrastive: False
-    contrastive_batch_size: 4 # the bacth will always be formed by 1 anchor, 1 positive, batch_size-2 negatives
+    contrastive: True
+    contrastive_batch_size: 8 # the batch will always be formed by 1 anchor, 1 positive, batch_size-2 negatives
 model:
-    model_type: 'efficientnetAttention' # resnet or efficientnet
+    model_type: 'efficientnet' # resnet or efficientnet
     num_classes: 2
     checkpoint_folder: 'checkpoints'
     continue_train: False
     binary: True
-fine_tuning:
+old_train:
     epochs: 50
     batch_size: 8
     learning_rate: 0.00002
 train:
     epochs: 100
     batch_size: 8
-    learning_rate: 0.0001
+    learning_rate: 0.00002
