--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ data_settings:
     contrastive: True
     contrastive_batch_size: 8 # the batch will always be formed by 1 anchor, 1 positive, batch_size-2 negatives
 model:
-    model_type: 'efficientnet' # resnet or efficientnet
+    model_type: 'efficientnetAttention' # resnet or efficientnet
     num_classes: 2
     checkpoint_folder: 'checkpoints'
     continue_train: False
