--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,13 @@
 data_settings:
     dataset_path: 'wikiart_data_batches/data_batches_filtered'
     binary: True
-    contrastive: True
+    contrastive: False
     contrastive_batch_size: 10 # The batch will always be formed by 1 anchor, 3 positives, (batch_size-4) negatives
 model:
-    model_type: 'efficientnet' # resnet or efficientnet or efficientnetAttention
+    model_type: 'resnet' # resnet or efficientnet or efficientnetAttention
     num_classes: 10 # If data_settings[binary] is True, number of classes will be always 2
     checkpoint_folder: 'checkpoints'
 train:
     epochs: 10
-    batch_size: 8
+    batch_size: 2
     learning_rate: 0.00002
