--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,13 @@
 data_settings:
     dataset_path: 'wikiart_data_batches/data_batches_filtered'
     binary: True
-    contrastive: False
+    contrastive: True
     contrastive_batch_size: 10 # The batch will always be formed by 1 anchor, 3 positives, (batch_size-4) negatives
 model:
-    model_type: 'efficientnetAttention' # resnet or efficientnet or efficientnetAttention
-    num_classes: 10 # If data_settings[binary] is True, number of classes will be always 2
+    model_type: 'efficientnet' # resnet or efficientnet or efficientnetAttention
+    num_classes:  2 # If data_settings[binary] is True, number of classes will be always 2
     checkpoint_folder: 'checkpoints'
 train:
     epochs: 20
     batch_size: 8
-    learning_rate: 0.00002 # 0.00002 for all experiments except multiclass eff (0.0001)
+    learning_rate: 0.00002 # 0.00002 for all experiments
